<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPLX</string>
    <string name="text_boarding">SHARE - INSPIRE - CONNECT</string>
    <string name="text_get_started">GET STARTED</string>
    <string name="text_forgot_pass">FORGOT PASSWORD</string>

    <string name="text_signup">SIGN UP</string>
    <string name="text_login">LOG IN</string>
    <string name="text_verification">VERIFICATION</string>
    <string name="text_type_your_email">TYPE YOUR EMAIL</string>
    <string name="text_set_new_password">SET NEW PASSWORD</string>
    <string name="text_verify">VERIFY</string>
    <string name="text_send">SEND</string>
    <string name="text_notice_verify">A message with verification code was sent to your mobile phone</string>
    <string name="list_guide_line">
         <h2>HƯỠNG DẪN THI</h2>\n
         <li>SỐ LƯỢNG CÂU HỎI: 25 CÂU</li>\n
          <li>YÊU CẦU LÀM ĐÚNG: 21/25 CÂU</li>\n
             <li>THỜI GIAN:19 PHÚT</li>\n
    </string>
</resources>