<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/splash">

    </ImageView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <TextView
            android:id="@+id/text_app"
            style="@style/TextAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="10dp"
            android:textAlignment="center">

        </TextView>

        <ImageView
            android:id="@+id/image_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_app"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/image_splash">

        </ImageView>

        <TextView
            android:id="@+id/text_boarding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_first"
            android:layout_centerHorizontal="true"
            android:text="@string/text_boarding"
            android:textColor="@color/white"
            android:textStyle="bold"></TextView>

        <Button
            android:id="@+id/btn_boarding"
            style="@style/ButtonRouder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_boarding"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_br"
            android:text="@string/text_get_started" />

    </RelativeLayout>

</RelativeLayout>