<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_br"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/br_login">

        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        style="@style/radiusTopRightLeft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_br"
        android:layout_marginTop="-100px"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_forgot_pass"
            android:id="@+id/title_forgot_pass"
            android:textColor="@color/purple"
            android:textSize="16dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/text_notice_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_forgot_pass"
            android:layout_centerHorizontal="true"
            android:background="@drawable/br_textnotice"
            android:text="@string/text_notice_verify"
            android:textAlignment="center"
            android:lineHeight="30dp"
            android:padding="10dp"
            android:textSize="16dp"
            >

        </TextView>
        <EditText
            android:id="@+id/edit_email_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/text_notice_verify"
            android:layout_marginTop="30dp"
            android:background="@drawable/br_input"
            android:hint="Email"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <Button
            android:id="@+id/btn_forgot_pass"
            style="@style/ButtonRouder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_email_forgot_pass"
            android:layout_marginTop="30dp"
            android:background="@drawable/br_button2"
            android:text="@string/text_send"
            android:textSize="17dp" />



    </RelativeLayout>

</RelativeLayout>