<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/layout_br"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/br_login">

    </ImageView>
</RelativeLayout>

    <RelativeLayout
        style="@style/radiusTopRightLeft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_br"
        android:layout_marginTop="-100px"
        android:paddingLeft="30dp"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:paddingBottom="50dp">

        <EditText
            android:id="@+id/edit_email_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/br_input"
            android:hint="Email"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <EditText
            android:id="@+id/edit_password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/edit_email_login"
            android:layout_marginTop="30dp"
            android:background="@drawable/br_input"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" />

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonRouder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_password_login"
            android:layout_marginTop="30dp"
            android:background="@drawable/br_button2"
            android:text="@string/text_login"
            android:textSize="17dp" />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_below="@+id/btn_login"
            android:id="@+id/text_forgot_pass"
            android:layout_width="wrap_content"
            android:text="@string/text_forgot_pass"
            android:textColor="@color/purple"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/text_forgot_pass"
            android:layout_centerHorizontal="true"
            >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Don't have account?"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple"
                android:layout_marginLeft="5dp"
                android:text="@string/text_signup"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>